Fix again a11y 03' in a better way through bottom alignement instead of top for civio/presupuesto-management#1126

--- a/budget_app/static/stylesheets/modules/data-controllers.scss
+++ b/budget_app/static/stylesheets/modules/data-controllers.scss
@@ -114,7 +114,7 @@
   .chart-embed-btn span{
     display: block;
     position: absolute;
-    top: 46px;
+    bottom: 15px;
     left: 0;
     width: 34px;
     height: 34px;
@@ -146,7 +146,7 @@
     .quantity-selection{
       position: absolute;
       left: 0;
-      top: 0;
+      bottom: 15px;
       width: 190px;
     }
 
